# pyrenamer

./: ChangeLog  Makefile.am  NEWS  README  build_deb.sh  configure.ac
data/: pyrenamer.desktop.in  pyrenamer.glade
debian/: changelog  control  copyright  menu  pyrenamer.xpm  watch
doc/: Makefile.am  treefilebrowser_example.py
images/: Makefile.am
po/: LINGUAS  POTFILES.in  en.po  es.po  fr.mo  pyrenamer.pot
pyrenamer/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  build_deb.sh  configure.ac
pyrenamer/data/: Makefile.am  pyrenamer.desktop.in.in  pyrenamer.desktop.in.in.in  pyrenamer.glade  pyrenamer.schemas.in
pyrenamer/debian/: changelog  control  copyright  pyrenamer.xpm  rules  watch
pyrenamer/doc/: pyrenamer.1  treefilebrowser_example.py
pyrenamer/images/: Makefile.am
pyrenamer/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  cs.po  de.po  en.po  es.po  fr.gmo  fr.po  notexist  pyrenamer.pot
pyrenamer/src/: Makefile.am  TreeViewTooltips.py  pyrenamer  pyrenamer.py  pyrenamer_filefuncs.py  pyrenamer_globals.py.in  pyrenamer_menu_cb.py  pyrenamer_metadata.py  pyrenamer_pattern_editor.py  pyrenamer_prefs.py  pyrenamer_undo.py  pyrenamerfilefuncs.py  tooltips.py  treefilebrowser.py
src/: Makefile.am  pyrenamer  pyrenamer.py  pyrenamer_debug.py  pyrenamer_filefuncs.py  pyrenamer_globals.py.in  pyrenamer_menu_cb.py  pyrenamer_pattern_editor.py  pyrenamer_tooltips.py  pyrenamerfilefuncs.py  treefilebrowser.py
